FIx foreigh object covering south rsize button
Add text cursor on hover

--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,7 @@ input[type='number'] {
 .rotate-button {
 	cursor: crosshair;
 }
+
+.shape-text:hover {
+	cursor: text;
+}
